docs(post): update images
Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -8,7 +8,7 @@ description: Welcome to Flyve MDM!
 category: user
 ---
 
-## Welcome to Flyve MDM!
+**Welcome to Flyve MDM!**
 
 Here we'll be explaining everything you need to know to start using your Inventory Agent.
 
@@ -25,26 +25,45 @@ You will be able to view and share your inventory in a JSON or XML file format.
 
 ## <a name="1"></a>1. Server configuration
 
-After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section.
+After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section. You can add as many servers you want.
 
-<img src="{{ 'images/screenshots/settings.png' | absolute_url }}" alt="Global Settings" height="600">
+<br/>
 
-Also you will find the Privacy options, where you can decide what information will be sent between these two options Health Reports and Usage Data.
+<div>
+<img src="{{ 'images/posts/list-server.png' | absolute_url }}" alt="List servers" height="500">
+
+<img src="{{ 'images/posts/add-server.png' | absolute_url }}" alt="Show my inventory" height="500">
+
+<img src="{{ 'images/posts/show-server.png' | absolute_url }}" alt="Inventory Agent Main" height="500">
+</div>
+
+Also you will find the Privacy options, where you can decide whether to send information regarding the app performance such as Health Reports and Usage Data.
 
 ## <a name="2"></a>2. Run my inventory
 
-To get the inventory tap in Run inventory now from the main screen, and it will automatically send the inventory report to your server address.
+To send the inventory manually tap in Run inventory now from the main screen, then select the server you want to send your inventory to.
 
-<img src="{{ 'images/screenshots/main.png' | absolute_url }}" alt="Run inventory now" height="600">
+<br />
+
+<div>
+<img src="{{ 'images/posts/inventory-main.png' | absolute_url }}" alt="Run inventory now" height="500">
+<img src="{{ 'images/posts/select-server.png' | absolute_url }}" alt="Select server" height="500">
+</div>
 
 ## <a name="3"></a>3. Show & Share my inventory
 
 If the Inventory is Enabled, you will be able to see your inventory with Show my inventory and share it either in a XML or JSON format through email, bluetooth, etc.
 
-<img src="{{ 'images/screenshots/show-share.gif' | absolute_url }}" alt="Show/share my inventory" height="600">
+<img src="{{ 'images/posts/show-share.gif' | absolute_url }}" alt="Show/share my inventory" height="500">
 
 ## <a name="4"></a>4. Automatize inventory
 
 With the Inventory parameters you can automatize the inventory generation, here you'll decide how your inventory will be run if manually or automatically, and the frequency it will have.
 
-<img src="{{ 'images/screenshots/automatic.png' | absolute_url }}" alt="Automatic inventory" height="600">
+<br />
+
+<div>
+<img src="{{ 'images/posts/automatic-inventory.png' | absolute_url }}" alt="Automatic inventory" height="500">
+
+<img src="{{ 'images/posts/frequency.png' | absolute_url }}" alt="Frequency" height="500">
+</div>
