--- a/_posts/static/2018-01-04-use-cases.md
+++ b/_posts/static/2018-01-04-use-cases.md
@@ -8,7 +8,6 @@ description: What you should know
 category: user
 date: 2017-10-04
 ---
-# Flyve MDM Inventory Agent
 
 The Android Inventory Agent features a complete inventory of your Android devices where both hardware and software information is collected.
 
@@ -18,15 +17,18 @@ The Inventory is sent automatically to the server address with the credentials d
 
 The inventory can be send to:
 
-* Inventory for GLPI 2.3.x and higher
-* OCSInventory NG (ocsng) 1.3.x and 2.x
-* Mandriva Pulse2
+* Fusion Inventory for GLPI 2.3.x and higher
 
 ### 1.2. Automatize Inventory
 
 An user can automatize both the inventory generation and sending, weekly, daily or monthly according to its own needs.
 
-<img src="{{ 'images/screenshots/automatic.png' | absolute_url }}" alt="Frequency" height="550">
+<br />
+
+<div>
+<img src="{{ 'images/posts/automatic-inventory.png' | absolute_url }}" alt="Automatize inventory" height="500">
+<img src="{{ 'images/posts/frequency.png' | absolute_url }}" alt="Frequency" height="500">
+</div>
 
 The Inventory Agent will restart its service to follow the new configuration.
 
@@ -34,7 +36,7 @@ The Inventory Agent will restart its service to follow the new configuration.
 
 Only when the Inventory is enabled, the user will be able to display the inventory of the device, and also have the option to share it in two formats JSON or XML by email, bluetooth, etc.
 
-<img src="{{ 'images/screenshots/show-share.gif' | absolute_url }}" alt="Show & Share my inventory" height="550">
+<img src="{{ 'images/posts/show-share.gif' | absolute_url }}" alt="Show & Share my inventory" height="500">
 
 ## 3. Privacy Options
 
