--- a/_posts/static/2018-07-24-adb-use.md
+++ b/_posts/static/2018-07-24-adb-use.md
@@ -44,7 +44,7 @@ USB debug is a feature available from the Developer Options, to enable this opti
 
 Once the the developers options are enabled, just check the option USB debugging.
 
-<img src="{{ 'images/screenshots/debug.png' | absolute_url}}" alt="Debug option">
+<img src="{{ 'images/posts/debug.png' | absolute_url}}" alt="Debug option" height="500">
 
 #### 3. Connect your device through USB
 
