docs(separator): add title separator to the inventory
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,8 @@
     <string name="InventoryFrequency">Frequency</string>
     <string name="InventoryFrequencyDialog">Every :</string>
     <string name="InventoryFrequencySummary">Define frequency</string>
+
+    <!-- Inventory -->
     <string name="Hardware">Hardware</string>
     <string name="User">User</string>
     <string name="Storage">Storage</string>
