docs(post): update the articles
fix headers level

Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2018-07-24-adb-use.md
+++ b/_posts/static/2018-07-24-adb-use.md
@@ -7,19 +7,19 @@ description: Extremely useful for issues
 category: contributing
 ---
 
-## SDK Tools
+### SDK Tools
 
 To diagnose and solve issues more quickly, we require useful information from the Android Debug Bridge.
 
-### Download SDK Platform Tools
+#### Download SDK Platform Tools
 
 Get the SDK Tools according to your operating system from [Developers Android Web site](https://developer.android.com/studio/releases/platform-tools).
 
 Unzip the file in any directory, be sure to remember which!
 
-### How to use
+#### How to use
 
-#### 1. Add the path to the folder
+##### 1. Add the path to the folder
 
 In every OS you must add the path to the directory where you unziped the platforms-tool, in order to execute the adb commands.
 
@@ -29,7 +29,7 @@ export PATH="$HOME/*your/path/to*/platform-tools:$PATH"
 
 - On windows you must check documentation according to your version.
 
-##### Workaround
+###### Workaround
 
 On Mac OS or Linux, open a terminal, go to the folder in which you unziped the platform tools, run the commands with the following syntax:
 
@@ -37,7 +37,7 @@ On Mac OS or Linux, open a terminal, go to the folder in which you unziped the p
 
 To test run: ```./adb help```, you should see the help output.
 
-#### 2. Activate USB debug on your device
+##### 2. Activate USB debug on your device
 
 USB debug is a feature available from the Developer Options, to enable this option go to Settings > About > Build number, tap 7 times the build number and you should see several messages indicating the count down to become a developer.
 
@@ -45,15 +45,15 @@ Once the the developers options are enabled, just check the option USB debugging
 
 <img src="{{ 'images/posts/debug.png' | absolute_url}}" alt="Debug option" height="500">
 
-#### 3. Connect your device through USB
+##### 3. Connect your device through USB
 
-#### 4. Check your device is connected
+##### 4. Check your device is connected
 
 Open a terminal on your computer and run: ```adb devices```
 
 You should see your device listed.
 
-#### 5. Get LogCat of the issue
+##### 5. Get LogCat of the issue
 
 - Run the following command:
 
@@ -63,10 +63,10 @@ You should see your device listed.
 
 You should see an output of several lines been writen constantly, after you get the error on the device, use ```ctrl + c``` to stop the terminal.
 
-#### 6. Contribute
+##### 6. Contribute
 
 Save the output in a file and add it in your issue, we really appreciate your contribution, this will help us solve your issue quickly.
 
-### More information
+#### More information
 
 See the [Official ADB Documentation](https://developer.android.com/studio/command-line/adb)
