fix(gh-pages): fix css / js path

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -24,7 +24,7 @@ You will be able to view and share your inventory in a JSON or XML file format.
 
 ## <a name="1"></a>1. Server configuration
 
-After you [install the app](http://flyve.org/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section. You can add as many servers you want.
+After you [install the app](https://glpi-project.github.io/android-inventory-agent/howtos/installation), you must define the server address and credentials where the inventory will be sent in the Global Settings section. You can add as many servers you want.
 
 <br/>
 
