fix(style): change style

--- a/_posts/static/2018-04-06-workflow.md
+++ b/_posts/static/2018-04-06-workflow.md
@@ -1,7 +1,7 @@
 ---
 layout: howtos
 published: true
-title: Flyve MDM Workflow
+title: Android Inventory Agent Workflow
 permalink: howtos/workflow
 description: What Contributors and Maintainers must know
 category: contributing
@@ -9,7 +9,7 @@ category: contributing
 
 ### We are on GitHub!
 
-We keep our projects in repositories on [GitHub](https://github.com/flyve-mdm/), one of the biggest host of source code in the world, and use [Git](https://git-scm.com/) as our version control system.
+We keep our projects in repositories on [GitHub](https://github.com/glpi-project/), one of the biggest host of source code in the world, and use [Git](https://git-scm.com/) as our version control system.
 
 ### Inside our repos
 
