--- a/_posts/static/2018-01-04-use-cases.md
+++ b/_posts/static/2018-01-04-use-cases.md
@@ -35,7 +35,7 @@ The Inventory Agent will restart its service to follow the new configuration.
 
 Only when the Inventory is enabled, the user will be able to display the inventory of the device, and also have the option to share it in two formats JSON or XML by email, bluetooth, etc.
 
-<img src="{{ 'images/posts/show-share.gif' | absolute_url }}" alt="Show & Share my inventory" height="500">
+<img src="{{ 'images/posts/show-share.png' | absolute_url }}" alt="Show & Share my inventory" height="500">
 
 ## 3. Privacy Options
 
