fix(content): fix reference
Signed-off-by: Teclib <skita@teclib.com>

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -3,11 +3,11 @@ layout: howtos
 published: true
 title: Getting Started
 permalink: howtos/how-to-use
-description: Welcome to Flyve MDM!
+description: Welcome to GLPI Android Inventory Agent!
 category: user
 ---
 
-**Welcome to Flyve MDM!**
+**Welcome to GLPI Android Inventory Agent !**
 
 Here we'll be explaining everything you need to know to start using your Inventory Agent.
 
