fix(gh-pages): update informations

--- a/_posts/static/2017-11-20-how-to-use.md
+++ b/_posts/static/2017-11-20-how-to-use.md
@@ -53,7 +53,7 @@ To send the inventory manually tap in Run inventory now from the main screen, th
 
 If the Inventory is Enabled, you will be able to see your inventory with Show my inventory and share it either in a XML or JSON format through email, bluetooth, etc.
 
-<img src="{{ 'images/posts/show-share.gif' | absolute_url }}" alt="Show/share my inventory" height="500">
+<img src="{{ 'images/posts/show-share.png' | absolute_url }}" alt="Show/share my inventory" height="500">
 
 ## <a name="4"></a>4. Automatize inventory
 
