--- a/_posts/static/2018-01-04-use-cases.md
+++ b/_posts/static/2018-01-04-use-cases.md
@@ -37,11 +37,11 @@ Only when the Inventory is enabled, the user will be able to display the invento
 
 <img src="{{ 'images/posts/show-share.png' | absolute_url }}" alt="Show & Share my inventory" height="500">
 
-## 3. Privacy Options
+<!--## 3. Privacy Options
 
 Health report and Usage data will be sent if enabled.
 
-The first is to send a Crash report using Bugsnag, in order to monitor any error that occurs in the application, and the second is for relevant and anonymous usage data.
+The first is to send a Crash report using Bugsnag, in order to monitor any error that occurs in the application, and the second is for relevant and anonymous usage data.-->
 
 ## 4. Inventory disabled
 
