--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,5 +267,7 @@
     <string name="permission_message">This application requires special permits to work properly</string>
     <string name="open_setting_categories">Open setting categories</string>
     <string name="list_categories">List Categories</string>
+    <string name="Options">Options</string>
+    <string name="Share">Share</string>
 
 </resources>
