fix(ui): change icon / banner
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="AccueilInventoryRun">Run inventory now</string>
     <string name="AccueilInventoryRunSummary">Send inventory report</string>
     <string name="AccueilInventoryParam">Inventory parameters</string>
-    <string name="AccueilInventoryParamSummary">Schedule the inventory task</string>
+    <string name="AccueilInventoryParamSummary">Schedule task</string>
     <string name="AccueilInventoryShow">Show my inventory</string>
     <string name="AccueilInventoryShowSummary">Display inventory report</string>
 
