fix(help): prevent error from android lollipop and WebView
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,6 +283,8 @@
 
 
     <string name="error_deeplink">Error when try to get data from deeplink</string>
+    <string name="install_web_view">It seems that you need to install the \"WebView\" package from Google to display the help page correctly.</string>
+    <string name="load_help_error">Unable to load help page</string>
 
 
 </resources>
