feat(core): native inventory compatibility
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,10 @@
         <item>Week</item>
         <item>Month</item>
     </string-array>
+    <string-array name="AssetItemtype">
+        <item>Computer</item>
+        <item>Phone</item>
+    </string-array>
     <plurals name="easter_egg_attempts">
         <item quantity="one">You have %d Attempt</item>
         <item quantity="other">You have %d Attempts</item>
