--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,5 +302,17 @@
     <string name="app_is_running_extend">To perform schedule inventory app is running in background</string>
     <string name="disable_notification">Disable notification</string>
 
+    <!-- message on app restrictions -->
+
+    <string name="auto_start_on_boot">Startup from system boot?</string>
+    <string name="automatic_inventory">Automatic inventory?</string>
+    <string name="server_list">Server list</string>
+    <string name="server_configuration">Server configuration</string>
+    <string name="server_url">Server URL</string>
+    <string name="server_tag">Server TAG</string>
+    <string name="server_login">Server login</string>
+    <string name="server_password">Server password</string>
+    <string name="server_custom_asset_serial">Custom asset serial</string>
+    <string name="server_itemtype">Asset itemtype</string>
 
 </resources>
