Fix(core): Fix android 14 compatibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="inventory_no_server">No server found</string>
     <string name="crashreport_disable">Crash report is disable, please enable to test it</string>
     <string name="dialog_share_title">Select the format to share</string>
+    <string name="schedule_inventory_each">Inventory is scheduled </string>
     <string-array name="export_list">
         <item>XML</item>
         <item>JSON</item>
